workflow/parser.out
Grammar:

Rule 0     S' -> phrase
Rule 1     phrase -> gam_para
Rule 2     phrase -> gam_adjv
Rule 3     phrase -> adjv_para
Rule 4     phrase -> quant_sized
Rule 5     phrase -> advb
Rule 6     phrase -> cardc
Rule 7     phrase -> demon
Rule 8     phrase -> para
Rule 9     phrase -> num
Rule 10    phrase -> quant
Rule 11    phrase -> appo
Rule 12    phrase -> pp
Rule 13    phrase -> gp
Rule 14    phrase -> defi
Rule 15    phrase -> adjv
Rule 16    phrase -> np
Rule 17    np -> CARD1 SFX
Rule 18    np -> QUANT SFX
Rule 19    np -> NOUN SFX
Rule 20    np -> PROPN A
Rule 21    np -> NOUN A
Rule 22    adjv -> np adjv_pp
Rule 23    adjv -> CARD1 adjv_pp
Rule 24    adjv -> adjv ADJV
Rule 25    adjv -> ADVB SFX
Rule 26    adjv -> ADVB gp
Rule 27    adjv -> ADVB defi
Rule 28    adjv -> ADVB num
Rule 29    adjv -> PRIN np
Rule 30    adjv -> ADVB quant
Rule 31    adjv -> ADVB pp
Rule 32    adjv -> ADVB np
Rule 33    adjv -> NEGA np
Rule 34    adjv -> ADJV np
Rule 35    adjv -> ADVB CARD1
Rule 36    adjv -> ADVB PRPS
Rule 37    adjv -> np adjv_para
Rule 38    adjv -> np advb
Rule 39    adjv -> CARD1 ADJV
Rule 40    adjv -> np ORDN
Rule 41    adjv -> np ADVB
Rule 42    adjv -> np ADJV
Rule 43    gam_adjv -> GAM ADVB
Rule 44    gam_adjv -> GAM CARD1
Rule 45    gam_adjv -> GAM PRPS
Rule 46    gam_adjv -> GAM gp
Rule 47    gam_adjv -> GAM defi
Rule 48    gam_adjv -> GAM num
Rule 49    gam_adjv -> GAM quant
Rule 50    gam_adjv -> GAM pp
Rule 51    gam_adjv -> GAM np
Rule 52    advb -> ADJV ADJV
Rule 53    advb -> ADJV ADVB
Rule 54    advb -> ADVB ADVB
Rule 55    defi -> ART gp
Rule 56    defi -> ART np
Rule 57    defi -> ART adjv
Rule 58    defi -> ART PREP
Rule 59    defi -> ART ADJV
Rule 60    defi -> ART CARD1
Rule 61    defi -> ART QUANT
Rule 62    defi -> ART PRDE
Rule 63    defi -> ART ORDN
Rule 64    constr -> ADJV C
Rule 65    constr -> PROPN C
Rule 66    constr -> NOUN C
Rule 67    gp -> constr phrase
Rule 68    gp -> constr PRPS
Rule 69    gp -> constr ADVB
Rule 70    gp -> constr ORDN
Rule 71    gp -> constr PRIN
Rule 72    gp -> constr CARD1
Rule 73    gp -> constr QUANT
Rule 74    gp -> constr PROPN
Rule 75    gp -> constr NOUN
Rule 76    qconstr -> ORDN C
Rule 77    qconstr -> QUANT C
Rule 78    quant -> np quant_sized
Rule 79    quant -> QUANT PRDE
Rule 80    quant -> np QUANT
Rule 81    quant -> QUANT np
Rule 82    quant -> qconstr phrase
Rule 83    quant -> qconstr PRDE
Rule 84    quant -> qconstr PROPN
Rule 85    quant_sized -> QUANT QUANT
Rule 86    quant_sized -> QUANT ADVB
Rule 87    demon -> defi PRDE
Rule 88    demon -> np PRDE
Rule 89    demon -> NOUN C PRDE
Rule 90    demon -> ADVB PRDE
Rule 91    demon -> PRIN PRDE
Rule 92    demon -> CARD1 PRDE
Rule 93    appo -> advb advb
Rule 94    appo -> defi np
Rule 95    appo -> num num
Rule 96    appo -> appo defi
Rule 97    appo -> appo np
Rule 98    appo -> gp gp
Rule 99    appo -> adjv adjv
Rule 100   appo -> appo appo
Rule 101   appo -> defi defi
Rule 102   appo -> np defi
Rule 103   appo -> np np
Rule 104   pp -> PREP PREP
Rule 105   pp -> PREP SFX
Rule 106   pp -> PREP ORDN
Rule 107   pp -> PREP PRPS
Rule 108   pp -> PREP PRIN
Rule 109   pp -> PREP INRG
Rule 110   pp -> PREP QUANT
Rule 111   pp -> PREP PRDE
Rule 112   pp -> PREP CARD1
Rule 113   pp -> PREP PROPN
Rule 114   pp -> PREP ADVB
Rule 115   pp -> PREP quant_sized
Rule 116   pp -> PREP advb
Rule 117   pp -> PREP cardc
Rule 118   pp -> PREP demon
Rule 119   pp -> PREP para
Rule 120   pp -> PREP num
Rule 121   pp -> PREP quant
Rule 122   pp -> PREP appo
Rule 123   pp -> PREP pp
Rule 124   pp -> PREP gp
Rule 125   pp -> PREP defi
Rule 126   pp -> PREP adjv
Rule 127   pp -> PREP np
Rule 128   adjv_pp -> ADJVPREP SFX
Rule 129   adjv_pp -> ADJVPREP num
Rule 130   adjv_pp -> ADJVPREP gp
Rule 131   adjv_pp -> ADJVPREP adjv
Rule 132   adjv_pp -> ADJVPREP np
Rule 133   adjv_pp -> ADJVPREP defi
Rule 134   para -> quant CONJQUANT para
Rule 135   para -> quant CONJQUANT quant
Rule 136   para -> adjv CONJADJV adjv
Rule 137   para -> gp CONJGP para
Rule 138   para -> gp CONJGP gp
Rule 139   para -> pp CONJPP para
Rule 140   para -> pp CONJPP pp
Rule 141   para -> np CONJ QUANT
Rule 142   para -> PRPS CONJ para
Rule 143   para -> PRPS CONJ gp
Rule 144   para -> PRPS CONJ defi
Rule 145   para -> PRPS CONJ quant
Rule 146   para -> PRPS CONJ np
Rule 147   para -> PRPS CONJ PRPS
Rule 148   para -> pp pp
Rule 149   para -> para SEP para
Rule 150   para -> pp SEPPREP para
Rule 151   para -> pp SEPPREP pp
Rule 152   para -> appo SEP para
Rule 153   para -> appo SEP appo
Rule 154   para -> num SEP para
Rule 155   para -> num SEP num
Rule 156   para -> gp SEPGP para
Rule 157   para -> gp SEPGP gp
Rule 158   para -> defi SEP para
Rule 159   para -> defi SEP defi
Rule 160   para -> np SEP para
Rule 161   para -> np SEP np
Rule 162   para -> num CONJ np
Rule 163   para -> num CONJ num
Rule 164   para -> para CONJ para
Rule 165   para -> demon CONJ para
Rule 166   para -> demon CONJ demon
Rule 167   para -> adjv CONJ np
Rule 168   para -> appo CONJ para
Rule 169   para -> appo CONJ appo
Rule 170   para -> defi CONJ gp
Rule 171   para -> defi CONJ np
Rule 172   para -> defi CONJ para
Rule 173   para -> defi CONJ defi
Rule 174   para -> np CONJ quant
Rule 175   para -> np CONJ gp
Rule 176   para -> np CONJ adjv
Rule 177   para -> np CONJ para
Rule 178   para -> np CONJ defi
Rule 179   para -> np CONJ np
Rule 180   adjv_para -> ADJV CONJ ADJV
Rule 181   adjv_para -> ADVB CONJ ADVB
Rule 182   gam_para -> gam_adjv SEP gam_adjv
Rule 183   gam_para -> gam_adjv gam_para
Rule 184   gam_para -> gam_adjv gam_adjv
Rule 185   cardc -> CARD CONJCARD CARD
Rule 186   cardc -> CARD CONJCARD cardc
Rule 187   cardc -> CARD cardc
Rule 188   cardc -> cardc CARD
Rule 189   cardc -> CARD C CARD
Rule 190   cardc -> CARD CARD
Rule 191   num -> appo CARD1
Rule 192   num -> adjv CARD1
Rule 193   num -> defi CARD1
Rule 194   num -> np CARD1
Rule 195   num -> CARD1 PRPS
Rule 196   num -> CARD1 QUANT
Rule 197   num -> CARD1 defi
Rule 198   num -> CARD1 adjv
Rule 199   num -> CARD1 appo
Rule 200   num -> CARD1 gp
Rule 201   num -> CARD1 np
Rule 202   num -> cardc defi
Rule 203   num -> cardc adjv
Rule 204   num -> cardc appo
Rule 205   num -> cardc gp
Rule 206   num -> cardc np
Rule 207   num -> adjv cardc
Rule 208   num -> appo cardc
Rule 209   num -> gp cardc
Rule 210   num -> np cardc

Terminals, with rules where they appear:

A                    : 20 21
ADJV                 : 24 34 39 42 52 52 53 59 64 180 180
ADJVPREP             : 128 129 130 131 132 133
ADVB                 : 25 26 27 28 30 31 32 35 36 41 43 53 54 54 69 86 90 114 181 181
ART                  : 55 56 57 58 59 60 61 62 63
C                    : 64 65 66 76 77 89 189
CARD                 : 185 185 186 187 188 189 189 190 190
CARD1                : 17 23 35 39 44 60 72 92 112 191 192 193 194 195 196 197 198 199 200 201
CONJ                 : 141 142 143 144 145 146 147 162 163 164 165 166 167 168 169 170 171 172 173 174 175 176 177 178 179 180 181
CONJADJV             : 136
CONJCARD             : 185 186
CONJGP               : 137 138
CONJPP               : 139 140
CONJQUANT            : 134 135
GAM                  : 43 44 45 46 47 48 49 50 51
INRG                 : 109
NEGA                 : 33
NOUN                 : 19 21 66 75 89
ORDN                 : 40 63 70 76 106
PRDE                 : 62 79 83 87 88 89 90 91 92 111
PREP                 : 58 104 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127
PRIN                 : 29 71 91 108
PROPN                : 20 65 74 84 113
PRPS                 : 36 45 68 107 142 143 144 145 146 147 147 195
QUANT                : 18 61 73 77 79 80 81 85 85 86 110 141 196
SEP                  : 149 152 153 154 155 158 159 160 161 182
SEPGP                : 156 157
SEPPREP              : 150 151
SFX                  : 17 18 19 25 105 128
error                : 

Nonterminals, with rules where they appear:

adjv                 : 15 24 57 99 99 126 131 136 136 167 176 192 198 203 207
adjv_para            : 3 37
adjv_pp              : 22 23
advb                 : 5 38 93 93 116
appo                 : 11 96 97 100 100 122 152 153 153 168 169 169 191 199 204 208
cardc                : 6 117 186 187 188 202 203 204 205 206 207 208 209 210
constr               : 67 68 69 70 71 72 73 74 75
defi                 : 14 27 47 87 94 96 101 101 102 125 133 144 158 159 159 170 171 172 173 173 178 193 197 202
demon                : 7 118 165 166 166
gam_adjv             : 2 182 182 183 184 184
gam_para             : 1 183
gp                   : 13 26 46 55 98 98 124 130 137 138 138 143 156 157 157 170 175 200 205 209
np                   : 16 22 29 32 33 34 37 38 40 41 42 51 56 78 80 81 88 94 97 102 103 103 127 132 141 146 160 161 161 162 167 171 174 175 176 177 178 179 179 194 201 206 210
num                  : 9 28 48 95 95 120 129 154 155 155 162 163 163
para                 : 8 119 134 137 139 142 149 149 150 152 154 156 158 160 164 164 165 168 172 177
phrase               : 67 82 0
pp                   : 12 31 50 123 139 140 140 148 148 150 151 151
qconstr              : 82 83 84
quant                : 10 30 49 121 134 135 135 145 174
quant_sized          : 4 78 115


state 0

    (0) S' -> . phrase
    (1) phrase -> . gam_para
    (2) phrase -> . gam_adjv
    (3) phrase -> . adjv_para
    (4) phrase -> . quant_sized
    (5) phrase -> . advb
    (6) phrase -> . cardc
    (7) phrase -> . demon
    (8) phrase -> . para
    (9) phrase -> . num
    (10) phrase -> . quant
    (11) phrase -> . appo
    (12) phrase -> . pp
    (13) phrase -> . gp
    (14) phrase -> . defi
    (15) phrase -> . adjv
    (16) phrase -> . np
    (182) gam_para -> . gam_adjv SEP gam_adjv
    (183) gam_para -> . gam_adjv gam_para
    (184) gam_para -> . gam_adjv gam_adjv
    (43) gam_adjv -> . GAM ADVB
    (44) gam_adjv -> . GAM CARD1
    (45) gam_adjv -> . GAM PRPS
    (46) gam_adjv -> . GAM gp
    (47) gam_adjv -> . GAM defi
    (48) gam_adjv -> . GAM num
    (49) gam_adjv -> . GAM quant
    (50) gam_adjv -> . GAM pp
    (51) gam_adjv -> . GAM np
    (180) adjv_para -> . ADJV CONJ ADJV
    (181) adjv_para -> . ADVB CONJ ADVB
    (85) quant_sized -> . QUANT QUANT
    (86) quant_sized -> . QUANT ADVB
    (52) advb -> . ADJV ADJV
    (53) advb -> . ADJV ADVB
    (54) advb -> . ADVB ADVB
    (185) cardc -> . CARD CONJCARD CARD
    (186) cardc -> . CARD CONJCARD cardc
    (187) cardc -> . CARD cardc
    (188) cardc -> . cardc CARD
    (189) cardc -> . CARD C CARD
    (190) cardc -> . CARD CARD
    (87) demon -> . defi PRDE
    (88) demon -> . np PRDE
    (89) demon -> . NOUN C PRDE
    (90) demon -> . ADVB PRDE
    (91) demon -> . PRIN PRDE
    (92) demon -> . CARD1 PRDE
    (134) para -> . quant CONJQUANT para
    (135) para -> . quant CONJQUANT quant
    (136) para -> . adjv CONJADJV adjv
    (137) para -> . gp CONJGP para
    (138) para -> . gp CONJGP gp
    (139) para -> . pp CONJPP para
    (140) para -> . pp CONJPP pp
    (141) para -> . np CONJ QUANT
    (142) para -> . PRPS CONJ para
    (143) para -> . PRPS CONJ gp
    (144) para -> . PRPS CONJ defi
    (145) para -> . PRPS CONJ quant
    (146) para -> . PRPS CONJ np
    (147) para -> . PRPS CONJ PRPS
    (148) para -> . pp pp
    (149) para -> . para SEP para
    (150) para -> . pp SEPPREP para
    (151) para -> . pp SEPPREP pp
    (152) para -> . appo SEP para
    (153) para -> . appo SEP appo
    (154) para -> . num SEP para
    (155) para -> . num SEP num
    (156) para -> . gp SEPGP para
    (157) para -> . gp SEPGP gp
    (158) para -> . defi SEP para
    (159) para -> . defi SEP defi
    (160) para -> . np SEP para
    (161) para -> . np SEP np
    (162) para -> . num CONJ np
    (163) para -> . num CONJ num
    (164) para -> . para CONJ para
    (165) para -> . demon CONJ para
    (166) para -> . demon CONJ demon
    (167) para -> . adjv CONJ np
    (168) para -> . appo CONJ para
    (169) para -> . appo CONJ appo
    (170) para -> . defi CONJ gp
    (171) para -> . defi CONJ np
    (172) para -> . defi CONJ para
    (173) para -> . defi CONJ defi
    (174) para -> . np CONJ quant
    (175) para -> . np CONJ gp
    (176) para -> . np CONJ adjv
    (177) para -> . np CONJ para
    (178) para -> . np CONJ defi
    (179) para -> . np CONJ np
    (191) num -> . appo CARD1
    (192) num -> . adjv CARD1
    (193) num -> . defi CARD1
    (194) num -> . np CARD1
    (195) num -> . CARD1 PRPS
    (196) num -> . CARD1 QUANT
    (197) num -> . CARD1 defi
    (198) num -> . CARD1 adjv
    (199) num -> . CARD1 appo
    (200) num -> . CARD1 gp
    (201) num -> . CARD1 np
    (202) num -> . cardc defi
    (203) num -> . cardc adjv
    (204) num -> . cardc appo
    (205) num -> . cardc gp
    (206) num -> . cardc np
    (207) num -> . adjv cardc
    (208) num -> . appo cardc
    (209) num -> . gp cardc
    (210) num -> . np cardc
    (78) quant -> . np quant_sized
    (79) quant -> . QUANT PRDE
    (80) quant -> . np QUANT
    (81) quant -> . QUANT np
    (82) quant -> . qconstr phrase
    (83) quant -> . qconstr PRDE
    (84) quant -> . qconstr PROPN
    (93) appo -> . advb advb
    (94) appo -> . defi np
    (95) appo -> . num num
    (96) appo -> . appo defi
    (97) appo -> . appo np
    (98) appo -> . gp gp
    (99) appo -> . adjv adjv
    (100) appo -> . appo appo
    (101) appo -> . defi defi
    (102) appo -> . np defi
    (103) appo -> . np np
    (104) pp -> . PREP PREP
    (105) pp -> . PREP SFX
    (106) pp -> . PREP ORDN
    (107) pp -> . PREP PRPS
    (108) pp -> . PREP PRIN
    (109) pp -> . PREP INRG
    (110) pp -> . PREP QUANT
    (111) pp -> . PREP PRDE
    (112) pp -> . PREP CARD1
    (113) pp -> . PREP PROPN
    (114) pp -> . PREP ADVB
    (115) pp -> . PREP quant_sized
    (116) pp -> . PREP advb
    (117) pp -> . PREP cardc
    (118) pp -> . PREP demon
    (119) pp -> . PREP para
    (120) pp -> . PREP num
    (121) pp -> . PREP quant
    (122) pp -> . PREP appo
    (123) pp -> . PREP pp
    (124) pp -> . PREP gp
    (125) pp -> . PREP defi
    (126) pp -> . PREP adjv
    (127) pp -> . PREP np
    (67) gp -> . constr phrase
    (68) gp -> . constr PRPS
    (69) gp -> . constr ADVB
    (70) gp -> . constr ORDN
    (71) gp -> . constr PRIN
    (72) gp -> . constr CARD1
    (73) gp -> . constr QUANT
    (74) gp -> . constr PROPN
    (75) gp -> . constr NOUN
    (55) defi -> . ART gp
    (56) defi -> . ART np
    (57) defi -> . ART adjv
    (58) defi -> . ART PREP
    (59) defi -> . ART ADJV
    (60) defi -> . ART CARD1
    (61) defi -> . ART QUANT
    (62) defi -> . ART PRDE
    (63) defi -> . ART ORDN
    (22) adjv -> . np adjv_pp
    (23) adjv -> . CARD1 adjv_pp
    (24) adjv -> . adjv ADJV
    (25) adjv -> . ADVB SFX
    (26) adjv -> . ADVB gp
    (27) adjv -> . ADVB defi
    (28) adjv -> . ADVB num
    (29) adjv -> . PRIN np
    (30) adjv -> . ADVB quant
    (31) adjv -> . ADVB pp
    (32) adjv -> . ADVB np
    (33) adjv -> . NEGA np
    (34) adjv -> . ADJV np
    (35) adjv -> . ADVB CARD1
    (36) adjv -> . ADVB PRPS
    (37) adjv -> . np adjv_para
    (38) adjv -> . np advb
    (39) adjv -> . CARD1 ADJV
    (40) adjv -> . np ORDN
    (41) adjv -> . np ADVB
    (42) adjv -> . np ADJV
    (17) np -> . CARD1 SFX
    (18) np -> . QUANT SFX
    (19) np -> . NOUN SFX
    (20) np -> . PROPN A
    (21) np -> . NOUN A
    (76) qconstr -> . ORDN C
    (77) qconstr -> . QUANT C
    (64) constr -> . ADJV C
    (65) constr -> . PROPN C
    (66) constr -> . NOUN C
    GAM             shift and go to state 18
    ADJV            shift and go to state 22
    ADVB            shift and go to state 19
    QUANT           shift and go to state 23
    CARD            shift and go to state 24
    NOUN            shift and go to state 25
    PRIN            shift and go to state 26
    CARD1           shift and go to state 20
    PRPS            shift and go to state 21
    PREP            shift and go to state 29
    ART             shift and go to state 32
    NEGA            shift and go to state 33
    PROPN           shift and go to state 28
    ORDN            shift and go to state 30

    phrase                         shift and go to state 1
    gam_para                       shift and go to state 2
    gam_adjv                       shift and go to state 3
    adjv_para                      shift and go to state 4
    quant_sized                    shift and go to state 5
    advb                           shift and go to state 6
    cardc                          shift and go to state 7
    demon                          shift and go to state 8
    para                           shift and go to state 9
    num                            shift and go to state 10
    quant                          shift and go to state 11
    appo                           shift and go to state 12
    pp                             shift and go to state 13
    gp                             shift and go to state 14
    defi                           shift and go to state 15
    adjv                           shift and go to state 16
    np                             shift and go to state 17
    qconstr                        shift and go to state 27
    constr                         shift and go to state 31

state 1

    (0) S' -> phrase .


state 2

    (1) phrase -> gam_para .
    $end            reduce using rule 1 (phrase -> gam_para .)
    CONJQUANT       reduce using rule 1 (phrase -> gam_para .)
    SEP             reduce using rule 1 (phrase -> gam_para .)
    GAM             reduce using rule 1 (phrase -> gam_para .)
    CONJGP          reduce using rule 1 (phrase -> gam_para .)
    SEPGP           reduce using rule 1 (phrase -> gam_para .)
    CARD            reduce using rule 1 (phrase -> gam_para .)
    ADJV            reduce using rule 1 (phrase -> gam_para .)
    PROPN           reduce using rule 1 (phrase -> gam_para .)
    NOUN            reduce using rule 1 (phrase -> gam_para .)
    CONJ            reduce using rule 1 (phrase -> gam_para .)
    CARD1           reduce using rule 1 (phrase -> gam_para .)
    ADVB            reduce using rule 1 (phrase -> gam_para .)
    PRIN            reduce using rule 1 (phrase -> gam_para .)
    NEGA            reduce using rule 1 (phrase -> gam_para .)
    ART             reduce using rule 1 (phrase -> gam_para .)
    QUANT           reduce using rule 1 (phrase -> gam_para .)
    CONJADJV        reduce using rule 1 (phrase -> gam_para .)
    CONJPP          reduce using rule 1 (phrase -> gam_para .)
    SEPPREP         reduce using rule 1 (phrase -> gam_para .)
    PREP            reduce using rule 1 (phrase -> gam_para .)
    PRDE            reduce using rule 1 (phrase -> gam_para .)


state 3

    (2) phrase -> gam_adjv .
    (182) gam_para -> gam_adjv . SEP gam_adjv
    (183) gam_para -> gam_adjv . gam_para
    (184) gam_para -> gam_adjv . gam_adjv
    (182) gam_para -> . gam_adjv SEP gam_adjv
    (183) gam_para -> . gam_adjv gam_para
    (184) gam_para -> . gam_adjv gam_adjv
    (43) gam_adjv -> . GAM ADVB
    (44) gam_adjv -> . GAM CARD1
    (45) gam_adjv -> . GAM PRPS
    (46) gam_adjv -> . GAM gp
    (47) gam_adjv -> . GAM defi
    (48) gam_adjv -> . GAM num
    (49) gam_adjv -> . GAM quant
    (50) gam_adjv -> . GAM pp
    (51) gam_adjv -> . GAM np
  ! shift/reduce conflict for SEP resolved as shift
  ! shift/reduce conflict for GAM resolved as shift
    $end            reduce using rule 2 (phrase -> gam_adjv .)
    CONJQUANT       reduce using rule 2 (phrase -> gam_adjv .)
    CONJGP          reduce using rule 2 (phrase -> gam_adjv .)
    SEPGP           reduce using rule 2 (phrase -> gam_adjv .)
    CARD            reduce using rule 2 (phrase -> gam_adjv .)
    ADJV            reduce using rule 2 (phrase -> gam_adjv .)
    PROPN           reduce using rule 2 (phrase -> gam_adjv .)
    NOUN            reduce using rule 2 (phrase -> gam_adjv .)
    CONJ            reduce using rule 2 (phrase -> gam_adjv .)
    CARD1           reduce using rule 2 (phrase -> gam_adjv .)
    ADVB            reduce using rule 2 (phrase -> gam_adjv .)
    PRIN            reduce using rule 2 (phrase -> gam_adjv .)
    NEGA            reduce using rule 2 (phrase -> gam_adjv .)
    ART             reduce using rule 2 (phrase -> gam_adjv .)
    QUANT           reduce using rule 2 (phrase -> gam_adjv .)
    CONJADJV        reduce using rule 2 (phrase -> gam_adjv .)
    CONJPP          reduce using rule 2 (phrase -> gam_adjv .)
    SEPPREP         reduce using rule 2 (phrase -> gam_adjv .)
    PREP            reduce using rule 2 (phrase -> gam_adjv .)
    PRDE            reduce using rule 2 (phrase -> gam_adjv .)
    SEP             shift and go to state 35
    GAM             shift and go to state 18

    gam_adjv                       shift and go to state 34
    gam_para                       shift and go to state 36

state 4

    (3) phrase -> adjv_para .
    $end            reduce using rule 3 (phrase -> adjv_para .)
    CONJQUANT       reduce using rule 3 (phrase -> adjv_para .)
    SEP             reduce using rule 3 (phrase -> adjv_para .)
    GAM             reduce using rule 3 (phrase -> adjv_para .)
    CONJGP          reduce using rule 3 (phrase -> adjv_para .)
    SEPGP           reduce using rule 3 (phrase -> adjv_para .)
    CARD            reduce using rule 3 (phrase -> adjv_para .)
    ADJV            reduce using rule 3 (phrase -> adjv_para .)
    PROPN           reduce using rule 3 (phrase -> adjv_para .)
    NOUN            reduce using rule 3 (phrase -> adjv_para .)
    CONJ            reduce using rule 3 (phrase -> adjv_para .)
    CARD1           reduce using rule 3 (phrase -> adjv_para .)
    ADVB            reduce using rule 3 (phrase -> adjv_para .)
    PRIN            reduce using rule 3 (phrase -> adjv_para .)
    NEGA            reduce using rule 3 (phrase -> adjv_para .)
    ART             reduce using rule 3 (phrase -> adjv_para .)
    QUANT           reduce using rule 3 (phrase -> adjv_para .)
    CONJADJV        reduce using rule 3 (phrase -> adjv_para .)
    CONJPP          reduce using rule 3 (phrase -> adjv_para .)
    SEPPREP         reduce using rule 3 (phrase -> adjv_para .)
    PREP            reduce using rule 3 (phrase -> adjv_para .)
    PRDE            reduce using rule 3 (phrase -> adjv_para .)


state 5

    (4) phrase -> quant_sized .
    $end            reduce using rule 4 (phrase -> quant_sized .)
    CONJQUANT       reduce using rule 4 (phrase -> quant_sized .)
    SEP             reduce using rule 4 (phrase -> quant_sized .)
    GAM             reduce using rule 4 (phrase -> quant_sized .)
    CONJGP          reduce using rule 4 (phrase -> quant_sized .)
    SEPGP           reduce using rule 4 (phrase -> quant_sized .)
    CARD            reduce using rule 4 (phrase -> quant_sized .)
    ADJV            reduce using rule 4 (phrase -> quant_sized .)
    PROPN           reduce using rule 4 (phrase -> quant_sized .)
    NOUN            reduce using rule 4 (phrase -> quant_sized .)
    CONJ            reduce using rule 4 (phrase -> quant_sized .)
    CARD1           reduce using rule 4 (phrase -> quant_sized .)
    ADVB            reduce using rule 4 (phrase -> quant_sized .)
    PRIN            reduce using rule 4 (phrase -> quant_sized .)
    NEGA            reduce using rule 4 (phrase -> quant_sized .)
    ART             reduce using rule 4 (phrase -> quant_sized .)
    QUANT           reduce using rule 4 (phrase -> quant_sized .)
    CONJADJV        reduce using rule 4 (phrase -> quant_sized .)
    CONJPP          reduce using rule 4 (phrase -> quant_sized .)
    SEPPREP         reduce using rule 4 (phrase -> quant_sized .)
    PREP            reduce using rule 4 (phrase -> quant_sized .)
    PRDE            reduce using rule 4 (phrase -> quant_sized .)


state 6

    (5) phrase -> advb .
    (93) appo -> advb . advb
    (52) advb -> . ADJV ADJV
    (53) advb -> . ADJV ADVB
    (54) advb -> . ADVB ADVB
  ! shift/reduce conflict for ADJV resolved as shift
  ! shift/reduce conflict for ADVB resolved as shift
    $end            reduce using rule 5 (phrase -> advb .)
    CONJQUANT       reduce using rule 5 (phrase -> advb .)
    SEP             reduce using rule 5 (phrase -> advb .)
    GAM             reduce using rule 5 (phrase -> advb .)
    CONJGP          reduce using rule 5 (phrase -> advb .)
    SEPGP           reduce using rule 5 (phrase -> advb .)
    CARD            reduce using rule 5 (phrase -> advb .)
    PROPN           reduce using rule 5 (phrase -> advb .)
    NOUN            reduce using rule 5 (phrase -> advb .)
    CONJ            reduce using rule 5 (phrase -> advb .)
    CARD1           reduce using rule 5 (phrase -> advb .)
    PRIN            reduce using rule 5 (phrase -> advb .)
    NEGA            reduce using rule 5 (phrase -> advb .)
    ART             reduce using rule 5 (phrase -> advb .)
    QUANT           reduce using rule 5 (phrase -> advb .)
    CONJADJV        reduce using rule 5 (phrase -> advb .)
    CONJPP          reduce using rule 5 (phrase -> advb .)
    SEPPREP         reduce using rule 5 (phrase -> advb .)
    PREP            reduce using rule 5 (phrase -> advb .)
    PRDE            reduce using rule 5 (phrase -> advb .)
    ADJV            shift and go to state 38
    ADVB            shift and go to state 39

    advb                           shift and go to state 37

state 7

    (6) phrase -> cardc .
    (188) cardc -> cardc . CARD
    (202) num -> cardc . defi
    (203) num -> cardc . adjv
    (204) num -> cardc . appo
    (205) num -> cardc . gp
    (206) num -> cardc . np
    (55) defi -> . ART gp
    (56) defi -> . ART np
    (57) defi -> . ART adjv
    (58) defi -> . ART PREP
    (59) defi -> . ART ADJV
    (60) defi -> . ART CARD1
    (61) defi -> . ART QUANT
    (62) defi -> . ART PRDE
    (63) defi -> . ART ORDN
    (22) adjv -> . np adjv_pp
    (23) adjv -> . CARD1 adjv_pp
    (24) adjv -> . adjv ADJV
    (25) adjv -> . ADVB SFX
    (26) adjv -> . ADVB gp
    (27) adjv -> . ADVB defi
    (28) adjv -> . ADVB num
    (29) adjv -> . PRIN np
    (30) adjv -> . ADVB quant
    (31) adjv -> . ADVB pp
    (32) adjv -> . ADVB np
    (33) adjv -> . NEGA np
    (34) adjv -> . ADJV np
    (35) adjv -> . ADVB CARD1
    (36) adjv -> . ADVB PRPS
    (37) adjv -> . np adjv_para
    (38) adjv -> . np advb
    (39) adjv -> . CARD1 ADJV
    (40) adjv -> . np ORDN
    (41) adjv -> . np ADVB
    (42) adjv -> . np ADJV
    (93) appo -> . advb advb
    (94) appo -> . defi np
    (95) appo -> . num num
    (96) appo -> . appo defi
    (97) appo -> . appo np
    (98) appo -> . gp gp
    (99) appo -> . adjv adjv
    (100) appo -> . appo appo
    (101) appo -> . defi defi
    (102) appo -> . np defi
    (103) appo -> . np np
    (67) gp -> . constr phrase
    (68) gp -> . constr PRPS
    (69) gp -> . constr ADVB
    (70) gp -> . constr ORDN
    (71) gp -> . constr PRIN
    (72) gp -> . constr CARD1
    (73) gp -> . constr QUANT
    (74) gp -> . constr PROPN
    (75) gp -> . constr NOUN
    (17) np -> . CARD1 SFX
    (18) np -> . QUANT SFX
    (19) np -> . NOUN SFX
    (20) np -> . PROPN A
    (21) np -> . NOUN A
    (52) advb -> . ADJV ADJV
    (53) advb -> . ADJV ADVB
    (54) advb -> . ADVB ADVB
    (191) num -> . appo CARD1
    (192) num -> . adjv CARD1
    (193) num -> . defi CARD1
    (194) num -> . np CARD1
    (195) num -> . CARD1 PRPS
    (196) num -> . CARD1 QUANT
    (197) num -> . CARD1 defi
    (198) num -> . CARD1 adjv
    (199) num -> . CARD1 appo
    (200) num -> . CARD1 gp
    (201) num -> . CARD1 np
    (202) num -> . cardc defi
    (203) num -> . cardc adjv
    (204) num -> . cardc appo
    (205) num -> . cardc gp
    (206) num -> . cardc np
    (207) num -> . adjv cardc
    (208) num -> . appo cardc
    (209) num -> . gp cardc
    (210) num -> . np cardc
    (64) constr -> . ADJV C
    (65) constr -> . PROPN C
    (66) constr -> . NOUN C
    (185) cardc -> . CARD CONJCARD CARD
    (186) cardc -> . CARD CONJCARD cardc
    (187) cardc -> . CARD cardc
    (188) cardc -> . cardc CARD
    (189) cardc -> . CARD C CARD
    (190) cardc -> . CARD CARD
  ! shift/reduce conflict for CARD resolved as shift
  ! shift/reduce conflict for ART resolved as shift
  ! shift/reduce conflict for CARD1 resolved as shift
  ! shift/reduce conflict for ADVB resolved as shift
  ! shift/reduce conflict for PRIN resolved as shift
  ! shift/reduce conflict for NEGA resolved as shift
  ! shift/reduce conflict for ADJV resolved as shift
  ! shift/reduce conflict for QUANT resolved as shift
  ! shift/reduce conflict for NOUN resolved as shift
  ! shift/reduce conflict for PROPN resolved as shift
    $end            reduce using rule 6 (phrase -> cardc .)
    CONJQUANT       reduce using rule 6 (phrase -> cardc .)
    SEP             reduce using rule 6 (phrase -> cardc .)
    GAM             reduce using rule 6 (phrase -> cardc .)
    CONJGP          reduce using rule 6 (phrase -> cardc .)
    SEPGP           reduce using rule 6 (phrase -> cardc .)
    CONJ            reduce using rule 6 (phrase -> cardc .)
    CONJADJV        reduce using rule 6 (phrase -> cardc .)
    CONJPP          reduce using rule 6 (phrase -> cardc .)
    SEPPREP         reduce using rule 6 (phrase -> cardc .)
    PREP            reduce using rule 6 (phrase -> cardc .)
    PRDE            reduce using rule 6 (phrase -> cardc .)
    CARD            shift and go to state 41
    ART             shift and go to state 32
    CARD1           shift and go to state 48
    ADVB            shift and go to state 50
    PRIN            shift and go to state 52
    NEGA            shift and go to state 33
    ADJV            shift and go to state 47
    QUANT           shift and go to state 49
    NOUN            shift and go to state 54
    PROPN           shift and go to state 28

    cardc                          shift and go to state 40
    defi                           shift and go to state 42
    adjv                           shift and go to state 43
    appo                           shift and go to state 44
    gp                             shift and go to state 45
    np                             shift and go to state 46
    num                            shift and go to state 51
    advb                           shift and go to state 53
    constr                         shift and go to state 31

state 8
